some fixes and more documentation, to fill in documentation of thrift

--- a/examples/supervisor_zk_update_monitor.conf
+++ b/examples/supervisor_zk_update_monitor.conf
@@ -17,10 +17,10 @@ strip_ansi=false
 
 
 [program:zk_update_monitor]
-command=sudo zk_update_monitor.py -d shu.dep -p 9898 -z examples/local_zk_hosts -b pinterest-test -a examples/real_boto_config.conf
+command=zk_update_monitor.py -d test_dependency.dep -p 9898 -z examples/local_zk_hosts -b pinterest-test -a examples/real_boto_config.conf
 priority=100
 autostart=true
 autorestart=true
 stopsignal=INT
 redirect_stderr=true
-environment=PATH='/Users/shu/kingpin/venv/bin',PINLOG_LOG_DIR='/var/log/supervisord'
+environment=PATH='/usr/local/bin',PINLOG_LOG_DIR='/var/log/supervisord'
