code doc update

--- a/examples/example_aws_keyfile.conf
+++ b/examples/example_aws_keyfile.conf
@@ -1,6 +1,6 @@
 [Credentials]
-aws_access_key_id = [Put your access key id here]
-aws_secret_access_key = [Put your secret key here]
+aws_access_key_id = [Put your access key id here and remove parentheses]
+aws_secret_access_key = [Put your secret key here and remove parentheses]
 
 [Boto]
 debug = 0
