--- a/examples/supervisor_zk_update_monitor.conf
+++ b/examples/supervisor_zk_update_monitor.conf
@@ -17,7 +17,7 @@ strip_ansi=false
 
 
 [program:zk_update_monitor]
-command=zk_update_monitor.py -d test_dependency.dep -p 9898 -z examples/local_zk_hosts -b pinterest-test -a examples/real_boto_config.conf
+command=zk_update_monitor.py -d [dependency-name] -p 9898 -z examples/local_zk_hosts -b [your-bucket-name] -a examples/real_boto_config.conf
 priority=100
 autostart=true
 autorestart=true
