--- a/examples/supervisor_zk_update_monitor.conf
+++ b/examples/supervisor_zk_update_monitor.conf
@@ -17,10 +17,9 @@ strip_ansi=false
 
 
 [program:zk_update_monitor]
-command=zk_update_monitor.py -d [dependency-name] -p 9898 -z examples/local_zk_hosts -b [your-bucket-name] -a examples/real_boto_config.conf
+command=zk_update_monitor.py -d [dependency-name] -p 9898 -z {absolute_path}/examples/local_zk_hosts -b [your-bucket-name] -a {absolute_path}/examples/example_aws_keyfile.conf
 priority=100
 autostart=true
 autorestart=true
 stopsignal=INT
 redirect_stderr=true
-environment=PATH='/usr/local/bin',PINLOG_LOG_DIR='/var/log/supervisord'
